# GLChess

./: CMakeLists.txt  Chess.cpp  GL_Chess.cpp  README.md  source.cpp
res/shaders/: basic.shader  chess.shader
src/: AI.h  Chess.cpp  Chess.h  GLChess  Man.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  Vertexbuffer.cpp  Vertexbuffer.h  glCamera.h  indexBuffer.cpp  indexBuffer.h  renderer.cpp  renderer.h  shader.h  skybox.h  vertexArrayLayout.cpp  vertexArrayLayout.h
