cmake_minimum_required(VERSION 3.0.0)
project(GLChess VERSION 0.1.0)
set(GLFW_H /Users/lucifer/Desktop/大二下/wuziqi/depends/include)
set(GLEW_H /usr/local/Cellar/glew/2.2.0_1/include)
include_directories(${GLFW_H} ${GLEW_H} src/vendor)
set(GLFW_LINK /Users/lucifer/Desktop/大二下/wuziqi/depends/lib/libglfw3.a)
set(GLEW_LINK /usr/local/Cellar/glew/2.2.0_1/lib/libGLEW.a)

set(CMAKE_CXX_FLAGS "-arch x86_64 -framework Cocoa -framework OpenGL -framework IOKit -framework CoreVideo -framework CoreGraphics")
SET(EXECUTABLE_OUTPUT_PATH /Users/lucifer/Desktop/大二下/wuziqi/src)
set(CMAKE_BUILD_TYPE Debug)
link_libraries(${GLFW_LINK} ${GLEW_LINK})
include(CTest)
enable_testing()
aux_source_directory(./src SRC_MAIN)
add_executable(GLChess ${SRC_MAIN} src/vendor/stb_image/stb_image.cpp)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)

